fix(theme): break a tag when it's too long

--- a/packages/theme/styles/normalize.styl
+++ b/packages/theme/styles/normalize.styl
@@ -45,6 +45,7 @@ a
   font-weight 500
   color var(--accent-color)
   text-decoration none
+  overflow-wrap break-word
 
 p a code
   font-weight 400
